CSS/style.css
/* Reseting spacing so all browsers start the same */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}
/* Main body styling */
body{
    font-family: Arial, sans-serif;
    background-color: #ffe4ec;
    color: #333;
    line-height: 1.6;
    font-size: 1.1rem;
}
/* Keep all contents centered and neat */
.container{
    width: 90%;
    max-width: 1200px;
    margin: auto;
}
/* Header section at the top with the salon name */
header{
    text-align: center;
    background-color: #dac1c9;
    padding: 20px;
    display: flex;
    justify-content: space-between;
}
.logo{
    width: 120px;
}
/*Navigation links*/
nav a{
    color: white;
    text-decoration: none;
    font-weight: bold;
    margin: 0 15px;
    transition: 0.3s;
}
/* Navigation hover effect*/
nav a:hover{
    color: black;
}
/* Hero section */
.hero{
    text-align: center;
    padding: 40px 20px;    
}
/* Main heading */
.hero h1{
    font-size: 4rem;
    margin-bottom: 20px;
}
/* Styling the main salon image */
.hero-image{
    margin: 40px auto;
    width: 70%;
    max-width: 600px;
    border-radius: 15px;
    box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
}
/* Small slogan under image */
.tagline{
    color: deeppink;
    font-style: italic;
}
/* Styling the book appointment button */
.btn{
    display: inline-block;
    background-color: deeppink;
    color: white;
    padding: 12px 20px;
    border-radius: 8px;
    text-decoration: none;
    margin-top: 15px;
    transition: 0.3s;
}
/* Change button colour when mouse is over it */
.btn:hover{
    background-color: black;
}
/* Gives spacing between different sections */
section{
    margin: 50px 0;
    text-align: center;
}
/* Services list */
ul{
    list-style: none;
}
/* Space between each service */
ul li{
    margin: 10px 0;
}
/* Styling the operating hours and services table  */
table{
    width: 60%;
    border-collapse: collapse;
    margin: auto;
    background-color: white;
}
/* Table cells */
th, td{
    border: 1px solid #ddd;
    padding: 15px;
    text-align: center;
}
/* Table heading row */
th{
    background-color: hotpink;
    color: white;
}
/* Footer at the bottom of the page */
footer{
    background-color: black;
    color: white;
    text-align: center;
    padding: 20px;
    margin-top: 40px;
}
/* About page main section */
.about-section{
    text-align: center;
    padding: 50px 20px;
}
/* Main heading on the about page */
.about-section h1{
    font-size: 3rem;
    margin-bottom: 20px;
    color: #222;
}
/* Styling the mission and vision headings */
.about-section h2{
    margin-top: 40px;
    margin-bottom: 15px;
    color: deeppink;
    font-size: 2rem;
}
/* Paragraph styling for about page text */
.about-section p{
    max-width: 800px;
    margin: auto;
    line-height: 1.8;
    font-size: 1.1rem;
}
/* Adds space between sections */
.about-section p,
.about-section h2{
    margin-bottom: 10px;
}
/* Booking page selection */
.booking-section{
    text-align: center;
    padding: 50px 20px;
}
/* Main booking heading */
.booking-section h1{
    font-size: 3rem;
    margin-bottom: 20px;
}
/* Small paragraph under heading */
.booking-section p{
    margin-bottom: 30px;
    font-size: 1.1rem;
}
/* Form container */
.booking-form{
    max-width: 600px;
    margin: auto;
    background-color: white;
    padding: 30px;
    border-radius: 15px;
    box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
    text-align: left;
}
/* Labels around inputs */
.booking-form label{
    display: block;
    margin-top: 15px;
    margin-bottom: 8px;
    font-weight: bold;
}
/* Input fields, dropdown and textarea */
.booking-form input,
.booking-form select,
.booking-form textarea{
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 8px;
    font-size: 1rem;
}
/* Radio button selection must be aligned properly*/
.radio-group{
    margin-top: 10px;
    display: flex;
    gap: 30px;
    align-items: center;
    margin-bottom: 15px;
}
/* Keeps radio buttons and text together */
.radio-group label{
    display: flex;
    align-items: center;
    gap: 8px;
    font-weight: normal;
}
/* Services page styling */
.services-section{
    padding: 40px 20px;
    text-align: center;
}
/* Main services heading */
.services-section h1{
    font-size: 3rem;
    margin-bottom: 15px;
}
/* Service category headings */
.services-section h2{
    margin-top: 50px;
    margin-bottom: 20px;
    color: deeppink;
}
/* Styling all service tables */
.services-table{
    width: 90%;
    margin: auto;
    border-collapse: collapse;
    margin-bottom: 40px;
    background-color: white;
    box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
}
/* Table headings */
.services-table th{
    background-color: deeppink;
    color: white;
    padding: 15px;
}
/* Table cells */
.services-table td{
    padding: 15px;
    border: 1px solid #ddd;
}
/* Hover effect for rows */
.services-table tr:hover{
    background-color: lightskyblue;
}
/* Small note at bottom */
.price-note{
    margin-top: 20px;
    font-size: 1.1rem;
}






/* Making the website fit better on smaller screens */
@media (max-width: 768px){
    nav{
        margin-top: 10px;
    }
    nav a{
        display: block;
        margin: 5px 0;
    }
    /* Making title smaller for phones */
    header{
        font-size: 2.5rem;
    }
    /* Making image fit phone screens */
    .hero h1{
        font-size: 2.5rem;
    }
    .hero-image{
        width: 95%;
    }
    /* Making table fit smaller screens */
    table{
        width: 100%;
    }
    /* Smaller heading for mobile screens */
    .about-section h1{
        font-size: 2.2rem;
    }
    /* Mission and vision headings become smaller */
    .about-section h2{
        font-size: 1.6rem;
    }
    /* Paragraph text fits better on smaller screens */
    .about-section p{
        width: 95%;
        font-size: 1rem;
    }
    .booking-section h1{
        font-size: 2.2rem;
    }
    .booking-form{
        width: 95%;
    }
    .services-table{
        width: 100%;
    }
    .services-section{
        font-size: 2.2rem;
    }
}

